2000-05-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-set-buddy-status): moved the call to
	set-just-signedonoff to within the check to see whether status
	just changed.  this fixes the bug where before it would say
	someone just signed on who in fact just set "away" or just became
	idle or whatever.

2000-05-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-im-buddy): now checks whether user is online.
	(tnt-set-buddy-status): now checking tnt-timers-available before
	setting a user as "just signed on/off".

2000-05-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-just-signedonoff-alist): added.
	(tnt-just-signedonoff-delay): added.
	(tnt-build-buddy-buffer): replaced big quoted lambda with quoted
	function tnt-buddy-list-filter.
	(tnt-buddy-list-filter): added.  
	(tnt-buddy-list-filter): now displays just-onoff, indicating
	whether a buddy just signed on or off.  this also means that a
	buddy can be displayed even if they're not online, which didn't
	used to be the case.
	(tnt-shutdown): sets just-signedonoff-alist to nil.
	(tnt-set-buddy-status): calls set-just-signedonoff.
	(tnt-set-just-signedonoff): added.  stores info in the new alist,
	and sets a timer to unset a minute later.
	(tnt-unset-just-signedonoff): added.  called by the timer above.
	removes an element from the alist.  but note that a new entry
	could have been added to the alist in between, in which case we do
	not remove it.  (using a timestamp to ensure that.)
	(tnt-get-just-signedonoff): added.  returns nil if no entry in the
	alist, or " (just signed %s)" with "on" or "off" substituted.

2000-05-15  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-beep): now accepts 'current, as well as 'visible and
	'audible.
	(tnt-beep-on-message-available-event): now defaults to 'current
	instead of 'audible.
	(tnt-beep-on-error): now defaults to 'current instead of 'audible.

2000-05-14  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
